Prior to this fix, the dropdown menu caused navigation issues on mobile devices. With this commit, I've resolved the problem, ensuring that the menu now functions smoothly without breaking the navigation.

--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ header {
     justify-content: space-between;
     align-items: center;
     height: 6rem;
+    background-color: #F2F7FF;
+    z-index: 1000;
 }
 
 header .nav__expander {
@@ -71,6 +73,7 @@ header .nav__expander {
     align-items: center;
     gap: 3rem;
     justify-content: space-around;
+    z-index: 0;
 }
 
 .header__navigation-nav {
@@ -140,34 +143,59 @@ header .nav__expander {
     position: relative;
     display: flex;
     justify-content: center;
-    align-items: center;
-    gap: 1rem;
+    /* gap: 1rem; */
     cursor: pointer;
     transition: all 0.2s ease-in;
 }
 
 
+.navigation_nav-sublist {
+    position: absolute;
+    top: 56px;
+    font-size: var(--font-200);
+    line-height: 23px;
+    letter-spacing: 1.5px;
+    color: #2D2F30;
+    z-index: 0;
+
+}
 
 .navigation_nav-sublist ul {
     list-style: none;
     display: grid;
     gap: 1rem;
-    margin-top: 1rem;
     background-color: #F2F7FF;
-    padding: 1rem;
+    height: 270px;
+    overflow: hidden;
+    transition: height 0.5s ease-in-out;
+    padding-inline: 1rem;
+    border: 1px solid #e1ebfc;
+   
 }
 
-.sublistHead,
-.navigation_nav-sublist {
-    position: absolute;
-    top: 20px;
-    font-size: var(--font-200);
-    line-height: 23px;
-    letter-spacing: 1.5px;
-    color: #2D2F30;
-    z-index: 2000;
-    height: 100%;
-    transition: all 0.2s;
+
+
+.navigation_nav-sublist.hide ul {
+    height: 0;
+    overflow: hidden;
+    border: none;
+}
+.sublist__head svg {
+    transition: transform 0.3s ease-in-out;
+}
+.sublist__head.hide svg {
+    transform: rotate(-180deg);
+}
+
+.navigation_nav-sublist.hide {
+    margin-block: 0;
+}
+
+
+.sublist__head {
+    display: flex;
+    gap: 2rem;
+   
 }
 
 .navigation_nav-sublist ul li {
@@ -177,11 +205,6 @@ header .nav__expander {
 
 .navigation_nav-sublist ul li:hover {
     background-color: #8a8abb1d;
-}
-
-.navigation_nav-sublist.hide {
-    overflow: hidden;
-    height: 0;
 }
 
 
@@ -240,7 +263,7 @@ header .nav__expander {
     .header__navigation {
         position: absolute;
         background-color: #F2F7FF;
-        bottom: -450px;
+        top: 78px;
         display: flex;
         flex-direction: column;
         align-items: start;
@@ -248,13 +271,27 @@ header .nav__expander {
         padding-block: 1rem;
         right: 0;
         width: 100%;
-        height: 50vh;
+        height: fit-content;
         transition: transform 0.5s ease;
-        color: #4F4F4F;
+        color: #4F4F4F;      
+    }
+
+    .navigation_nav-sublist {
+        position: relative;
+        top: 20px;
+    }
+
+    .sublist {
+        flex-direction: column;
+    }
+
+    .navigation_nav-sublist ul {
+        border-radius: 15px;
+        background-color: #8a8abb1d;
     }
 
     .header__navigation.collapsed {
-        transform: translateY(-560px);
+        transform: translateY(-844px);
     }
 
 
@@ -1261,10 +1298,12 @@ footer {
     border: 1px solid #284DD3;
     width: 100%;
 }
+
 textarea.success,
 input.success {
     border: 1px solid #2bc40c;
 }
+
 textarea.error,
 input.error {
     border: 1px solid #e80808;
@@ -1301,6 +1340,7 @@ textarea.success,
 input.success {
     border: 1px solid #2bc40c;
 }
+
 textarea.error,
 input.error {
     border: 1px solid #e80808;
@@ -1471,7 +1511,7 @@ dialog[open] {
     height: 100%;
     padding: 2rem;
 
-   
+
 }
 
 .contentBox p {
